fix flip animation, still weird on mobile

--- a/nada-notes/src/App.css
+++ b/nada-notes/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  background-color: #b7e2f3;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -7,29 +6,35 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #282c34;
+  overflow: scroll;
+}
+
+.cardlist-container {
+  width: 80%;
 }
 
 .card-container {
-  display: flex;
+  align-items: center;
+  display: inline-flex;
+  flex-flow: row wrap;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1rem;
+  justify-content: space-around;
 }
 
 .card {
-  display: flex;
+  background-color: #F9F2E5;
+  display: inline-flex;
   justify-content: center;
-  align-items: center;
   position: relative;
   border-radius: .25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
-  background-color: white;
   transform-style: preserve-3d;
   transition: 150ms;
   cursor: pointer;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0));
-  min-height: 10rem;
-  min-width: 10rem;
-  margin: .5rem .5rem;
-  display: flex;
-  flex-direction: column;
+  height: 15rem;
+  width: 25rem;
 }
 
 .card:hover {
@@ -54,18 +59,4 @@
 
 .card .back {
   transform: rotateY(180deg);
-}
-
-.flashcard-options {
-  margin-top: .5rem;
-}
-
-.flashcard-option {
-  margin-top: .25rem;
-  color: #555;
-  font-size: .75rem;
-}
-
-.flashcard-option:first-child {
-  margin-top: 0;
 }
